# Valgrind

./: .gitignore  README.md  pyproject.toml
src/: config.json  main.py
src/assets/localization/: local_EN.json  local_RU.json
src/assets/methods/: caesar.py  vigener.py  xor.py
src/assets/methods/guides/: how_EN.md  how_RU.md  how_ru.md
src/assets/pages/: GuidePage.py  ImagePage.py  MainPage.py  Pages.py  SettingsPage.py  TextPage.py
