[project]
name = "Valgrind"
version = "1.1.1"
description = "The data encryption program"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Dmitry Kovalenko" }
]
dependencies = [
    "flet>=0.80.5"
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop-light>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "com.dmtkov"
product = "Valgrind"
company = "Dmitry Kovalenko"

[tool.flet.app]
path = "src"
exclude = [".git", ".venv"]

[tool.flet.splash]
android = false